# ssw-567-group-work

./: README.md  justfile  pyproject.toml
.circleci/: config.yml
.github/workflows/: ci.yml
src/: hw01_classify_triangle.py
tests/: test_example.py  test_hw01_triangles.py
