[tool.poetry]
name = "ssw-567-group-work"
version = "0.1.0"
description = ""
authors = ["Carson McManus <carson.mcmanus1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
black = "^23.12.1"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
